tests/errors/string/wrong_target_length_errors.sim

        fn f() {
          s: [u8; 4];
          entry:
            s = b"hello";
            return
        }
        