tests/errors/string/wrong_target_length_errors.err.expected
error: at 5:13: [TC-AssignmentTypeMismatch] In function 'f', block 'entry': Type mismatch in assignment. LHS is [u8; 4], RHS is [u8; 5]
   |
 5 |             s = b"hello";
   |             ^^^^^^^^^^^^
